# DocForge

./: .gitignore  .~lock.resume.docx#  LICENSE  README.md  pyproject.toml
cli/: main.py
core/: config.py  file_manager.py  logger.py  task_manager.py
engines/: ghostscript.py  libreoffice.py  tesseract.py
modules/convert/: __init__.py  img2pdf.py  pdf2img.py  pdf2txt.py  pdf2word.py  word2pdf.py
modules/edit/: merge.py  rotate.py  split.py
modules/ocr/: ocr.py
modules/optimize/: __init__.py  compress.py
modules/security/: protect.py
tests/: test_core.py
utils/: deps.py
